examples/c/error-codes/violates-constraint/fatal/CV-TDG5-bad-static.output
CV-TDG5-bad-static.c:1:10: error: invalid storage class specifier in function declarator
void foo(auto int x) {}
         ^
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-e4qJP/pp-Rkyuf.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
